shakes fist at java modules